dataset1235/2025-2/2868285114/users/1746929503/executions/3649835072_704983377.log
== SUBMISSION (2025-08-19 23:04:57)
-- CODE: 
x = int(input("digite x: "))
y = int(input("digite y"))
print(x//y)
print(x%y)
print(x/y)
ŕint(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:04:55)
-- CODE: 
x = int(input("digite x: "))
y = int(input("digite y"))
print(x//y)
print(x%y)
print(x/y)
ŕint(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:04:48)
-- CODE: 
x = int(input("digite x: "))
y = int(input("digite y:"))
print(x//y)
print(x%y)
print(x/y)
ŕint(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    \u0155int(x*y)
    ^^^^
NameError: name '\u0155int' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:13:22)
-- CODE: 
## variaveis do algoritimo 
x = int(input())
y = int(input())

## // == div. inteira || / == div. realm (float) || %
int = x // y
rest = x % y 
print(int)
print(rest)

real = x / y 
print(real)

prod = x * y
potencia = y**3
print(prod)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:05:06)
-- CODE: 
x = int(input("digite x: "))
y = int(input("digite y"))
print(x//y)
print(x%y)
print(x/y)
print(x*y)
print(y**3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
